# Bagua-Oracle

./: .gitignore  INTERACTION-SPEC.md  README.md  SPEC.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
data/: hexagram_english_supplement.json  hexagram_lookup.json  trigrams.json
data/hexagrams/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  40.json  (+24 more)
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Bones.tsx  FortuneSlip.tsx  InterpretationMarkdown.tsx  Trigram.tsx  TurtleShell.tsx
frontend/components/stages/: LoadingStage.tsx  QuestionStage.tsx  ReadingStage.tsx  ThrowStage.tsx
frontend/lib/: api.ts  bones.ts  formatInterpretation.ts  motionPermission.ts  sounds.ts  suppressIosUndo.ts  types.ts  useShakeDetection.ts
raw_data/: iching_full.txt  interpretation.txt
scripts/: parse_iching_text.py  parse_interpretation_txt.py  simulate_cast.py
src/api/: schemas.py  server.py
src/bones/: classifier.py
src/iching/: faces.py  hexagrams.py  text_loader.py  trigrams.py  types.py
src/interpretation/: llm_client.py  prompt_builder.py
tests/: test_faces.py  test_hexagrams.py  test_text_loader.py  test_trigrams.py
(+2 files in other folders)
